# neither

./: .gitignore  CMakeLists.txt
neither/include/: either.hpp  lift.hpp  maybe.hpp  neither.hpp  traits.hpp  try.hpp  writer.hpp
